# poiesis

./: .firebaserc  .gitignore  INSTALL_NOTES.md  README.md  ROADMAP.md  add_node.sh  architecture.md  firestore.indexes.json  firestore.rules  glitch_core.yaml  install.sh  phase1.md  phase2.md  phase3.md  pyproject.toml  rebuild.md  todo.md  wipe_memories.py
deploy/: Caddyfile  README.md  cloudflared-config.yml  glitch.service  poiesis.service
docs/: client_integration.md
glitch_core/: asgi.py  bootstrap.py  config.py  daemon.py  gitops.py  scheduler.py  schemas.py  store.py  supervisor.py
glitch_core/agent/: __init__.py  core.py  prompt.py  tools.py
glitch_core/agents/: __init__.py  builtin_tools.py  router.py
glitch_core/cli/: __init__.py  compaction.py  main.py  workers.py
glitch_core/compaction/: __init__.py  pipeline.py  prompts.py  rollback.py
glitch_core/migrations/: runner.py
glitch_core/ouroboros/: __init__.py  page_generator.py  sandbox.py  theme_generator.py  tool_generator.py  workspace.py
glitch_core/web/: app.py  auth.py  engine.py  middleware.py  theming.py
glitch_core/web/pages/: agents.py  chat.py  dashboard.py  journals.py  logs.py  memories.py  review.py  settings.py  soul.py  system.py  theme.py  workers.py  workspace.py
glitch_core/web/pages_custom/: comfyui_gen.py  comfyui_page.py  test_page.py
glitch_core/web/templates/: agent_edit.html  agents.html  base.html  chat.html  dashboard.html  journals.html  log_detail.html  login.html  logs.html  memories.html  review.html  settings.html  soul.html  system.html  theme.html  workers.html  workspace.html
glitch_core/web/templates/components/: chat_messages.html  nav.html  (+8 more)
glitch_core/web/templates_custom/: comfyui_gen.html  comfyui_page.html  test_page.html
glitch_core/workers/: __init__.py  loop.py  protocol.py  reaper.py  registration.py
poiesis/: asgi.py  bootstrap.py  config.py  db.py  gitops.py  scheduler.py  store.py  supervisor.py
poiesis/agent/: __init__.py  core.py  models.py  openai_turn.py  prompt.py  spice_tools.py  tools.py
poiesis/cli/: __init__.py
poiesis/migrations/: runner.py
poiesis/migrations/versions/: 0001_initial.sql  0002_schedules.sql  0003_message_session.sql  0004_channel_engine.sql  0005_channel_base_url.sql  0006_memory_per_channel.sql  0007_memory_channel_index.sql  0008_message_status.sql
poiesis/web/: app.py  auth.py  middleware.py  pwa.py  theming.py  turns.py
poiesis/web/pages/: chat.py  settings.py
poiesis/web/templates/: base.html  chat.html  settings.html  soul_edit.html  transcript.html
scripts/: upgrade_deps.py
soul/: SOUL.md
souls/: analytics.md  bug.md  feature.md  general.md  pm.md  sarah_router.md  spice.md
tests/: test_auth.py  test_chat_flow.py  test_db.py  test_gitops.py  test_scheduler.py  test_spice.py  test_supervisor.py  test_turns.py
tools/: weather_fetcher.py
workspace/: report.py
(+1 files in other folders)
