[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glitch-core"
version = "0.1.0"
description = "Distributed self-hosted AI system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "claude-agent-sdk>=0.2.110",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.1.0",
    "itsdangerous>=2.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
glitch = "glitch_core.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["glitch_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
