[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poiesis"
version = "0.2.0"
description = "Single-user, self-hosted personal AI that edits its own code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "claude-agent-sdk>=0.2.110",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.1.0",
    "itsdangerous>=2.1.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
poiesis = "poiesis.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["poiesis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
