[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poiesis"
version = "0.2.0"
description = "Single-user, self-hosted personal AI that edits its own code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "claude-agent-sdk>=0.2.110",
    "click>=8.4.2",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[project.scripts]
poiesis = "poiesis.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["poiesis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
